--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,7 +4,10 @@
 {% endblock %}
 
     {% block content %}
-    <h1>Главная страница1</h1>
-    <p>Text1</p>
+    <h1>Сайт посвещен путешествию и</h1>
+    <h1>кодингу</b></h1>
+
+    <p>Сайт такой прекрасный сайт. Все о путешествиях и кодах.</p>
+    <p>Наша команда путешествует и кодит по всему миру.</p>
 
     {% endblock %}
